@@ -1,3 +1,7 @@
+2018-05-24    <cerebrum@gagarin.uit.no>
+
+	* process_systemx.py (Build._process_sysx): This script will now also send out emails when reopening old accounts
+
 2018-05-03    <cerebrum@gagarin.uit.no>
 
 	* export_safecom.py (safecom_export.load_cbdata): Need to collect all accounts, not only primary
